# CppNumericalSolvers

./: CMakeLists.txt
include/cppoptlib/linesearch/: armijo.h  more_thuente.h
include/cppoptlib/solver/: bfgs.h  lbfgs.h  lbfgsb.h  newton_descent.h
include/cppoptlib/utils/: derivatives.h
src/examples/: simple.cc
src/test/: verify.cc
